# sandbox-graphics

./: .clang-format  .gitignore  README.md
algebraicnumbers/: README.md  conanfile.txt  premake5.lua
algebraicnumbers/AlgebraicNumbers/: Algebraic.cpp  Algebraic.h  Camera2D.cpp  Camera2D.h  CameraController.cpp  CameraController.h  Complex.cpp  Complex.h  DrawSurface.cpp  DrawSurface.h  Main.cpp  Utils.cpp  Utils.h  Vector2.cpp  Vector2.h  premake5.lua
cs291_interactive_3d_rendering/: README.md  index.html  index1.html  run_web_server.py
cs291_interactive_3d_rendering/libs/: coordinates.js  projector.js  rounded_box_geometry.js  shaders.js  teacup_geometry.js  teacup_geometry_orig.js  teapot_geometry.js  teaspoon_geometry.js  teaspoon_geometry_orig.js  webgl_detector.js
cs291_interactive_3d_rendering/unit_01/: info.txt  unit1-fix-javascript-errors.html  unit1-fix-javascript-errors.js  unit1-fps.html  unit1-fps.js  unit1-render-mode-0.html  unit1-render-mode-0.js  unit1-render-mode-1.html  unit1-render-mode-1.js  unit1-render-mode-2.html  unit1-render-mode-2.js  unit1-teacup-demo.html  unit1-teacup-demo.js  unit1-teapot-demo.html  unit1-teapot-demo.js  unit1-teaspoon-demo.html  unit1-teaspoon-demo.js
cs291_interactive_3d_rendering/unit_02/: 1_draw_a_square.js  2_vertex_order.js  3_polygon-creation.js  4_polygon-location.js  5_polygon-radius.js  6_create-stairs.js  7_drinking-bird.js  8_z_buffer_fighting.js  9_z_buffer_fighting_fixed.js
cs291_interactive_3d_rendering/unit_03/: 01_color-demo.js  02_vertex-attributes.js  03_diffuse-material.js  03_material.js  04_HSL-demo.js  05_teapot-demo.js  06_tessellation-demo.js  07_transparency.js  08_over_operator.js  09_blending.js  10_diffuse-demo.js  11_drinking-bird-shiny.js  12_drinking-bird-transparency.js
cs291_interactive_3d_rendering/unit_04/: 01_euler_angles.js  02_rotate_then_scale.js  03_robot_arm_demo.js  04_robot_arm_demo_forearm.js  05_robot_arm_demo_upper_arm.js  06_rotation_exercise.js  07_scale_exercise.js  08_snowman_exercise.js  09_clock_exercise.js  10_robot_arm_extended_exercise.js  11_robot_hand_exercise.js  12_flower_exercise.js  13_flowersquish_exercise.js
cs291_interactive_3d_rendering/unit_05/: 1_axis_angle_exercise.js  2_ps_cylinder_exercise.js  3_ps_capsule_exercise.js  4_ps_helix_exercise.js  5_db_geom_exercise.js
cs291_interactive_3d_rendering/unit_06/: 1_set-a-directional-light.js  2_head-light.js  3_spot-light.js  4_shadows.js  5_fog.js  6_swivel-light-control.js  7_swivel-and-tilt.js
cs291_interactive_3d_rendering/unit_07/: 1_lookat.js  2_fov-slider.js  3_dolly-and-zoom.js  4_orthographic-projection.js  5_view-pipeline.js  6_four-viewports.js  7_rear-view-camera.js
cs291_interactive_3d_rendering/unit_08/: 01_uv-coordinates.js  02_texture-distortion.js  03_wrap-mode.js  04_texture-magnification.js  05_texture-minification.js  06_mipmapping.js  07_anisotropy.js  08_particles.js  09_textured-square.js  10_particle-grid.js  11_ps-pick-a-letter.js  12_ps-grassy-plain.js  13_ps-db-tail.js  14_ps-specular-mapping.js  15_ps-reflection-mapping.js
cs291_interactive_3d_rendering/unit_09/: 01-fresnel.js  01_fragment.glsl  01_fresnel.js  02-energy-balanced.js  02_energy_balanced.js  03-gamma.js  03_gamma.js  04_toon.js  04_toon_fragment.glsl  04_toon_vertex.glsl  05_fragment.glsl  05_procedural_texturing.js  06_fragment.glsl  06_procedural_with_gain.js  06_vertex.glsl  07_anisotropic_shading.js  07_fragment.glsl  07_vertex.glsl  09_fragment.glsl  09_moving_flashlight.js  10_fragment.glsl  10_gamma_banding.js  10_model_deformation.js  10_vertex.glsl  11_vertex.glsl  11_vertex_normal_creation.js  12_fragment.glsl  12_sharp_specular.js  13_fragment.glsl  13_wrap_lighting.js
cs291_interactive_3d_rendering/unit_10/: 1_picking.js  2_set_the_pivot.js  3_constant_vs_timed_steps.js  4_tweening_demo.js  5_flowing-river.js  6_jaunty-hat.js
draco_loader/: diamond.drc  tooth.drc  webgl_loader_draco.html
glprogramming-12/: conan_init.ps1  conanfile.txt  premake5.lua
glprogramming-12/BezierCurve/: Main.cpp  main.c  premake5.lua
glprogramming-12/BezierSurface/: main.c  main0.c  premake5.lua
glprogramming-12/NURBSSurface/: main.c  premake5.lua
js-demos/: particle-byunny-01.html  particle-byunny-01.js  particle-byunny-02.html  particle-byunny-02.js  particle-byunny-03.html  particle-byunny-03.js  run_web_server.py
opengl-playgound-01/: index-01.html  index-02.html
opengl_01/: .gitignore  conanfile.txt  gen_solution.bat  premake5.lua
opengl_01/Demo/: Main.cpp  premake5.lua
ray-traciing-weekone/: .clang-format  CMakeLists.txt
ray-traciing-weekone/src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  sphere.h  utils.h  vec3.h
ray-tracing-weeknext/: CMakeLists.txt
ray-tracing-weeknext/cmake/: Functions.cmake  InitVCPKG.cmake
ray-tracing-weeknext/src/: color.h  hittable_list.h  sphere.h  utils.h
ray-tracing-weekone/: .clang-format  .gitignore  CMakeLists.txt  build.bat
ray-tracing-weekone/renders/: 01_normals.ppm  02_simple_diffuse_material.ppm  03_lambertian.ppm  04_diffuse_material_no_acne.ppm  04_lambertian_no_acne.ppm  05_gamma_multiplier_10.ppm  05_gamma_multiplier_30.ppm  05_gamma_multiplier_50.ppm  05_gamma_multiplier_70.ppm  (+19 more)
raytracer-py/: Readme.md  raytracer.py
simple-red-box/: build-clang.ps1  build-mingw.ps1  simple-red-box.cpp
tinyrenderer/: CMakeLists.txt  main.cpp  tgaimage.cpp  tgaimage.h
vtk/ImplicitPlaneWidget2/: CMakeLists.txt  ImplicitPlaneWidget2.cpp  vcpkg.json
vulkan-01/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  compile_shaders.bat  project.sprj  vcpkg.json
vulkan-01/CMake/: ToolchainUpdate.cmake
vulkan-01/Resources/: App.rc.in
vulkan-01/Resources/Shaders/: SimpleShader.frag  SimpleShader.vert  SimpleShader2.frag  SimpleShader2.vert  SimpleShaderSprj.frag  SimpleShaderSprj.vert
vulkan-01/Source/: ApplicationOne.cpp  ApplicationOne.h  Device.cpp  Device.h  Filesystem.cpp  Filesystem.h  Main.cpp  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
(+26 files in other folders)
